# storymachine

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
doc/: workflow.md
evals/: annotate_tool.py  eval.py  molabel-patch.css
evals/layouts/: eval.grid.json
src/storymachine/: activities.py  ai.py  cli.py  config.py  implementation_context.py  logging.py  story_machine.py  types.py  workflow.py
src/storymachine/prompts/: acceptance_criteria.md  enrich_context.md  iterating_on_stories.md  problem_break_down.md  repo_questions.md
tests/: conftest.py  test_cli.py  test_config.py  test_implementation_context.py  test_story_generator.py  test_story_machine.py
tests/fixtures/: sample_prd.md  sample_tech_spec.md
