[project]
name = "storymachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ask-github",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.116.1",
    "openai>=0.100.2",
    "pydantic-settings>=2.10.1",
    "python-fasthtml>=0.12.25",
    "structlog>=25.4.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.10",
    "pyright>=1.1.404",
    "marimo[recommended]>=0.15.2",
    "molabel>=0.1.5",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.1",
]

[project.scripts]
storymachine = "storymachine.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.marimo.language_servers.pylsp]
enabled = true
enable_ruff = true

[tool.marimo.diagnostics]
enabled = true

[tool.uv.sources]
ask-github = { git = "https://github.com/nilenso/ask-github.git" }
